# wca-dc-webhook

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.es.md  README.md  config.py  crontab  database.py  detection.py  docker-compose.yml  main.py  notifications.py  prev_comps.json  pyproject.toml  registration_tracking.json  requirements.txt  spots_tracking.json  wca_api.py
.github/workflows/: main.yml
docs/plans/: 2026-07-14-configurable-reliable-monitor.md
docs/superpowers/plans/: 2026-05-18-docker-hosting-migration.md  2026-05-19-modular-refactor.md
docs/superpowers/specs/: 2026-05-18-docker-hosting-migration-design.md
src/wca_notifier/: __init__.py  __main__.py  config.py  detection.py  events.py  healthcheck.py  i18n.py  main.py  monitor.py  repository.py  wca_client.py
src/wca_notifier/locales/: en.json  es.json
src/wca_notifier/notifications/: __init__.py  discord.py  error_logging.py  formatting.py  telegram.py
tests/: conftest.py  test_config.py  test_detection.py  test_i18n.py  test_monitor_cycle.py  test_notifications.py  test_repository.py  test_wca_client.py
